WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52289
[Qt] cookiesEnabled could create the cookieJar on the wrong thread.
https://bugs.webkit.org/show_bug.cgi?id=52289
Summary
[Qt] cookiesEnabled could create the cookieJar on the wrong thread.
Jocelyn Turcotte
Reported
2011-01-12 03:48:37 PST
This will happen if QNetworkAccessManager::cookieJar() is called when the cookie jar hasn't been created in the QNAM yet. See
bug #52081
.
Attachments
Patch
(6.83 KB, patch)
2011-02-07 11:51 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2011-01-12 03:59:03 PST
Thanks Jocelyn for creating the bug report. I'll look into that.
Benjamin Poulain
Comment 2
2011-02-07 11:51:48 PST
Created
attachment 81502
[details]
Patch
Jocelyn Turcotte
Comment 3
2011-02-07 12:15:58 PST
(In reply to
comment #2
)
> Created an attachment (id=81502) [details] > Patch
I have no authority to say so, but nevertheless this patch LGTM.
Benjamin Poulain
Comment 4
2011-02-07 13:00:13 PST
(In reply to
comment #3
)
> I have no authority to say so, but nevertheless this patch LGTM.
Thanks for looking, I was hoping you would do so :)
WebKit Commit Bot
Comment 5
2011-02-07 22:27:27 PST
Comment on
attachment 81502
[details]
Patch Clearing flags on attachment: 81502 Committed
r77901
: <
http://trac.webkit.org/changeset/77901
>
WebKit Commit Bot
Comment 6
2011-02-07 22:27:32 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2011-02-07 22:54:23 PST
http://trac.webkit.org/changeset/77901
might have broken Qt Linux Release The following tests are not passing: http/tests/websocket/tests/websocket-protocol-ignored.html
Benjamin Poulain
Comment 8
2011-02-08 01:01:22 PST
(In reply to
comment #7
)
>
http://trac.webkit.org/changeset/77901
might have broken Qt Linux Release > The following tests are not passing: > http/tests/websocket/tests/websocket-protocol-ignored.html
Unlikely related to this patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug