2011-02-07  Benjamin Poulain  <ikipou@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] cookiesEnabled could create the cookieJar on the wrong thread.
        https://bugs.webkit.org/show_bug.cgi?id=52289

        Use the QtNAMThreadSafeProxy to make sure the cookie jar is created
        in the same thread as the QNetworkAccessManager.

        * platform/network/qt/QtNAMThreadSafeProxy.cpp:
        (WebCore::QtNAMThreadSafeProxy::QtNAMThreadSafeProxy):
        (WebCore::QtNAMThreadSafeProxy::hasCookieJar):
        * platform/network/qt/QtNAMThreadSafeProxy.h:
        * platform/qt/CookieJarQt.cpp:
        (WebCore::cookiesEnabled):
2011-02-07  Benjamin Poulain  <ikipou@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] cookiesEnabled could create the cookieJar on the wrong thread.
        https://bugs.webkit.org/show_bug.cgi?id=52289

        Test if the cookie jar is created in the right thread when accessed from
        the navigator object.

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::navigatorCookieEnabledForNetworkAccessManagerOnDifferentThread):

Canonical link: https://commits.webkit.org/67960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77901 268f45cc-cd09-0410-ab3c-d52691b4dbfc